@@ -86,14 +86,18 @@ enum
 
 enum
 {
-  PROP_0,
+  PROP_0 = 0,
+  PROP_ADJUSTMENT,
   PROP_SILENT
 };
 
 /* Initializations */
 
+#define DEFAULT_ADJUSTMENT 175
+
 static gint gate_int (gint value, gint min, gint max);
-static void transform (guint32 * src, guint32 * dest, gint video_area);
+static void transform (guint32 * src, guint32 * dest, gint video_area,
+		       gint adjustment);
 
 /* The capabilities of the inputs and outputs. */
 
@@ -152,6 +156,11 @@ gst_burn_class_init (GstburnClass * klass)
   gobject_class->set_property = gst_burn_set_property;
   gobject_class->get_property = gst_burn_get_property;
 
+  g_object_class_install_property (gobject_class, PROP_ADJUSTMENT,
+      g_param_spec_uint ("adjustment", "Adjustment",
+	  "Adjustment parameter", 0, 256, DEFAULT_ADJUSTMENT,
+	  G_PARAM_READWRITE | G_PARAM_STATIC_STRINGS | GST_PARAM_CONTROLLABLE));
+
   g_object_class_install_property (gobject_class, PROP_SILENT,
       g_param_spec_boolean ("silent", "Silent", "Produce verbose output ?",
           FALSE, G_PARAM_READWRITE));
@@ -180,6 +189,8 @@ gst_burn_init (Gstburn * filter,
 
   gst_element_add_pad (GST_ELEMENT (filter), filter->sinkpad);
   gst_element_add_pad (GST_ELEMENT (filter), filter->srcpad);
+
+  filter->adjustment = DEFAULT_ADJUSTMENT;
   filter->silent = FALSE;
 }
 
@@ -190,12 +201,15 @@ gst_burn_set_property (GObject * object, guint prop_id,
   Gstburn *filter = GST_BURN (object);
 
   switch (prop_id) {
-    case PROP_SILENT:
-      filter->silent = g_value_get_boolean (value);
-      break;
-    default:
-      G_OBJECT_WARN_INVALID_PROPERTY_ID (object, prop_id, pspec);
-      break;
+  case PROP_SILENT:
+    filter->silent = g_value_get_boolean (value);
+    break;
+  case PROP_ADJUSTMENT:
+    filter->adjustment = g_value_get_uint (value);
+    break;
+  default:
+    G_OBJECT_WARN_INVALID_PROPERTY_ID (object, prop_id, pspec);
+    break;
   }
 }
 
@@ -206,12 +220,15 @@ gst_burn_get_property (GObject * object, guint prop_id,
   Gstburn *filter = GST_BURN (object);
 
   switch (prop_id) {
-    case PROP_SILENT:
-      g_value_set_boolean (value, filter->silent);
-      break;
-    default:
-      G_OBJECT_WARN_INVALID_PROPERTY_ID (object, prop_id, pspec);
-      break;
+  case PROP_SILENT:
+    g_value_set_boolean (value, filter->silent);
+    break;
+  case PROP_ADJUSTMENT:
+    g_value_set_uint (value, filter->adjustment);
+    break;
+  default:
+    G_OBJECT_WARN_INVALID_PROPERTY_ID (object, prop_id, pspec);
+    break;
   }
 }
 
@@ -243,7 +260,7 @@ gst_burn_chain (GstPad * pad, GstBuffer * in_buf)
 {
   Gstburn *filter;
   GstBuffer * out_buf = gst_buffer_copy(in_buf); 
-  gint width, height, video_size;
+  gint width, height, video_size, adjustment;
 
   guint32 *src = (guint32 * ) GST_BUFFER_DATA (in_buf);
   guint32 *dest = (guint32 * ) GST_BUFFER_DATA (out_buf);
@@ -252,8 +269,9 @@ gst_burn_chain (GstPad * pad, GstBuffer * in_buf)
   width = filter->width;
   height = filter->height;
   video_size = width * height;
+  adjustment = filter->adjustment;
 
-  transform (src, dest, video_size);
+  transform (src, dest, video_size, adjustment);
 
   return gst_pad_push (filter->srcpad, out_buf);
 }
@@ -303,11 +321,11 @@ static gint gate_int ( gint value, gint min, gint max)
 }
 
 /* Transform processes each frame. */
-static void transform (guint32 * src, guint32 * dest, gint video_area)
+static void transform (guint32 * src, guint32 * dest, gint video_area,
+		       gint adjustment)
 {
   guint32 in, red, green, blue;
   gint x;
-  gint adjustment = 175;
 
   for (x = 0; x < video_area; x++) {
     in = *src++;
