@@ -86,11 +86,16 @@ enum
 
 enum
 {
-  PROP_0,
+  PROP_0 = 0,
+  PROP_EDGE_A,
+  PROP_EDGE_B,
   PROP_SILENT
 };
 
 /* Initializations */
+
+#define DEFAULT_EDGE_A 200
+#define DEFAULT_EDGE_B 1
 
 const float pi = 3.141582f;
 
@@ -105,7 +110,8 @@ static gint gate_int ( gint value, gint min, gint max);
 void setup_cos_table(void);
 static gint cos_from_table(int angle);
 inline int abs_int(int val);
-static void transform (guint32 * src, guint32 * dest, gint video_area);
+static void transform (guint32 * src, guint32 * dest, gint video_area,
+		       gint edge_a, gint edge_b);
 
 /* The capabilities of the inputs and outputs. */
 
@@ -164,6 +170,16 @@ gst_chromium_class_init (GstchromiumClass * klass)
   gobject_class->set_property = gst_chromium_set_property;
   gobject_class->get_property = gst_chromium_get_property;
 
+  g_object_class_install_property (gobject_class, PROP_EDGE_A,
+      g_param_spec_uint ("edge-a", "Edge A",
+	  "First edge parameter", 0, 256, DEFAULT_EDGE_A,
+	  G_PARAM_READWRITE | G_PARAM_STATIC_STRINGS | GST_PARAM_CONTROLLABLE));
+
+  g_object_class_install_property (gobject_class, PROP_EDGE_B,
+      g_param_spec_uint ("edge-b", "Edge B",
+	  "Second edge parameter", 0, 256, DEFAULT_EDGE_B,
+	  G_PARAM_READWRITE | G_PARAM_STATIC_STRINGS | GST_PARAM_CONTROLLABLE));
+
   g_object_class_install_property (gobject_class, PROP_SILENT,
       g_param_spec_boolean ("silent", "Silent", "Produce verbose output ?",
           FALSE, G_PARAM_READWRITE));
@@ -192,6 +208,9 @@ gst_chromium_init (Gstchromium * filter,
 
   gst_element_add_pad (GST_ELEMENT (filter), filter->sinkpad);
   gst_element_add_pad (GST_ELEMENT (filter), filter->srcpad);
+
+  filter->edge_a = DEFAULT_EDGE_A;
+  filter->edge_b = DEFAULT_EDGE_B;
   filter->silent = FALSE;
 
   setup_cos_table();
@@ -204,12 +223,18 @@ gst_chromium_set_property (GObject * object, guint prop_id,
   Gstchromium *filter = GST_CHROMIUM (object);
 
   switch (prop_id) {
-    case PROP_SILENT:
-      filter->silent = g_value_get_boolean (value);
-      break;
-    default:
-      G_OBJECT_WARN_INVALID_PROPERTY_ID (object, prop_id, pspec);
-      break;
+  case PROP_SILENT:
+    filter->silent = g_value_get_boolean (value);
+    break;
+  case PROP_EDGE_A:
+    filter->edge_a = g_value_get_uint (value);
+    break;
+  case PROP_EDGE_B:
+    filter->edge_b = g_value_get_uint (value);
+    break;
+  default:
+    G_OBJECT_WARN_INVALID_PROPERTY_ID (object, prop_id, pspec);
+    break;
   }
 }
 
@@ -219,14 +244,22 @@ gst_chromium_get_property (GObject * object, guint prop_id,
 {
   Gstchromium *filter = GST_CHROMIUM (object);
 
+  GST_OBJECT_LOCK (filter);
   switch (prop_id) {
-    case PROP_SILENT:
-      g_value_set_boolean (value, filter->silent);
-      break;
-    default:
-      G_OBJECT_WARN_INVALID_PROPERTY_ID (object, prop_id, pspec);
-      break;
+  case PROP_SILENT:
+    g_value_set_boolean (value, filter->silent);
+    break;
+  case PROP_EDGE_A:
+    g_value_set_uint (value, filter->edge_a);
+    break;
+  case PROP_EDGE_B:
+    g_value_set_uint (value, filter->edge_b);
+    break;
+  default:
+    G_OBJECT_WARN_INVALID_PROPERTY_ID (object, prop_id, pspec);
+    break;
   }
+  GST_OBJECT_UNLOCK (filter);
 }
 
 /* GstElement vmethod implementations */
@@ -257,7 +290,7 @@ gst_chromium_chain (GstPad * pad, GstBuffer * in_buf)
 {
   Gstchromium *filter;
   GstBuffer * out_buf = gst_buffer_copy(in_buf); 
-  gint width, height, video_size;
+  gint width, height, video_size, edge_a, edge_b;
 
   guint32 *src = (guint32 * ) GST_BUFFER_DATA (in_buf);
   guint32 *dest = (guint32 * ) GST_BUFFER_DATA (out_buf);
@@ -266,8 +299,10 @@ gst_chromium_chain (GstPad * pad, GstBuffer * in_buf)
   width = filter->width;
   height = filter->height;
   video_size = width * height;
+  edge_a = filter->edge_a;
+  edge_b = filter->edge_b;
 
-  transform (src, dest, video_size);
+  transform (src, dest, video_size, edge_a, edge_b);
 
   return gst_pad_push (filter->srcpad, out_buf);
 }
@@ -345,14 +380,11 @@ static gint cos_from_table(int angle)
 }
 
 /* Transform processes each frame. */
-static void transform (guint32 * src, guint32 * dest, gint video_area)
+static void transform (guint32 * src, guint32 * dest, gint video_area, 
+		       gint edge_a, gint edge_b)
 {
   guint32 in, red, green, blue;
   gint x;
-  guint32 edge_a, edge_b;
-
-  edge_a = 200;
-  edge_b = 1;
 
   for (x = 0; x < video_area; x++) {
     in = *src++;
@@ -361,18 +393,15 @@ static void transform (guint32 * src, guint32 * dest, gint video_area)
     green = (in >> 8) & 0xff;
     blue = (in) & 0xff;
 
-    red = abs_int(
-          cos_from_table(
-            (red + edge_a) + 
-            ((red * edge_b) / 2)));
-    green = abs_int(
-          cos_from_table(
-            (green + edge_a) + 
-            ((green * edge_b) / 2)));
-    blue = abs_int(
-          cos_from_table(
-            (blue + edge_a) + 
-            ((blue * edge_b) / 2)));
+    red = abs_int( cos_from_table(
+				  (red + edge_a) + 
+				  ((red * edge_b) / 2)));
+    green = abs_int( cos_from_table(
+				    (green + edge_a) + 
+				    ((green * edge_b) / 2)));
+    blue = abs_int( cos_from_table(
+				   (blue + edge_a) + 
+				   ((blue * edge_b) / 2)));
 
     red = gate_int (red, 0, 255);
     green = gate_int (green, 0, 255);
