@@ -1,3 +1,6 @@
+2010-20-10	Luis de Bethencourt  <luis@debethencourt.com>
+	* Setter and getter functions for dynamic properties added.
+
 2010-13-06  Luis de Bethencourt  <luis@debethencourt.com>
 	* Dilate effect added.
 
